# ARBITRAGEXPLUS-II

./: .env.example  .env.local.example  .eslintrc.json  .replit  API-ENDPOINTS.md  ARQUITECTURA.md  CAMBIOS_IMPLEMENTADOS.md  CHANGELOG.md  ERRORES_PENDIENTES.md  README-DEPLOYMENT.md  README-NEW.md  README-RESUMIDO.md  README.md  SISTEMA-ESCANEO-MEV.md  default-assets-and-pairs.json  drizzle.config.ts  faucet-log.json  git_diff_report.txt  mev-engine-local.ts  mev-scan-config.json  mev-scanner-config.json  next.config.js  package-lock.json  package.json  replit.md  run-mev-engine.sh  server.ts  setup.ps1  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page-arrays.tsx  page.tsx  providers.tsx
attached_assets/: Análisis de Riesgos y Mitigaciones para Bots MEV (ARBITRAGEXPLUS-II)_1759786643072.md  Arquitectura Técnica del Bot MEV (ARBITRAGEXPLUS-II) (1)_1759786643070.md  Arquitectura Técnica del Bot MEV (ARBITRAGEXPLUS-II) - Actualizada con Estrategia de Arbitraje_1759786643070.md  Auditoría Técnica Exhaustiva y Plan de Producción para ARBITRAGEXPLUS-II_1759786643073.md  Auditoría Técnica y Plan de Producción para ARBITRAGEXPLUS-II_1759786643073.md  Desarrollo para mi app_1759682441932.txt  Estrategia de Arbitraje del Bot MEV (ARBITRAGEXPLUS-II)_1759786643071.md  Mecanismos de Monitoreo y Métricas Clave para el Bot MEV (ARBITRAGEXPLUS-II) en Producción_1759786643069.md  Oportunidades MEV y Estrategias de Capitalización en ARBITRAGEXPLUS-II_1759786643072.md  PRD EXTENDIDO_1759699071591.txt  Pasted--Arquitectura-V3-6-con-RLI-anti-rugpull-flash-loans-ejecuci-n-privada-wallet-consolidada-front-1759598949850_1759598949850.txt  Pasted--Claro-Al-Restaurar-defaults-se-cargan-estos-assets-y-pares-por-blockchain-los-mismos-que-de-1759719997296_1759719997296.txt  Pasted--Crack-Con-eso-ya-vivo-te-dejo-el-siguiente-paso-Nivel-2-cablear-simulaci-n-2-legs-3-legs-1759718644332_1759718644333.txt  Pasted--De-una-Te-dejo-1-Diagn-stico-claro-de-tus-errores-y-por-qu-pasan-2-Dos-parches-li-1759719972297_1759719972297.txt  Pasted--Hecho-Aqu-tienes-un-prompt-listo-para-tu-agente-c-pialo-completo-para-aplicar-los-parches-1759717288002_1759717288002.txt  Pasted--Hecho-Te-dej-un-paquete-con-100-conexiones-RPC-gratuitas-70-mainnet-30-testnet-ya-prec-1759607333427_1759607333428.txt  Pasted--LOVABLE-FRONTEND-DASHBOARD-V3-6-INTEGRADO-Una-interfaz-profesional-editable-seg-1759599026445_1759599026445.txt  Pasted--Listo-H-ctor-Abajo-te-dejo-parches-diff-exactos-formato-git-apply-para-agregar-el-esc-ner-1759717076372_1759717076373.txt  Pasted--Lo-tengo-Ese-error-de-deny-overflowing-literals-salta-cuando-un-literal-num-rico-sin-suf-1759645499430_1759645499431.txt  Pasted--Lo-tengo-Integr-todo-lo-que-ya-ten-as-ChainsPanel-workflow-backend-Rust-ruteo-medici-n--1759683554142_1759683554143.txt  Pasted--Mucho-En-corto-m-s-aciertos-con-menos-gasto-y-un-motor-listo-para-escalar-sin-romper-nada--1759718659844_1759718659844.txt  Pasted--Perfecto-Reinicio-el-dise-o-100-en-Rust-sin-mocks-ni-hardcodes-para-que-el-Backend-MEV-En-1759701488531_1759701488532.txt  Pasted--Perfecto-Te-dejo-todo-lo-que-pediste-m-dulos-listos-para-integrar-en-tu-ENGINE-RUST-m-s-ti-1759694654867_1759694654868.txt  Pasted--Prompt-para-la-Implementaci-n-de-un-Bot-MEV-de-Alto-Rendimiento-ARBITRAGEXPLUS-II-Objetivo-1759786680555_1759786680556.txt  Pasted--S-es-absolutamente-conveniente-y-lo-exijo-con-toda-claridad-MENSAJ-1759599064689_1759599064690.txt  Pasted--Vamos-a-convertir-Admin-Assets-en-tu-Asset-Pair-Orchestrator-v2-0-sin-quiz-s-Solo-co-1759751456361_1759751456363.txt  Pasted--Vamos-a-fusionar-ambas-ideas-y-subirlas-de-nivel-Abajo-tienes-una-s-per-propuesta-integrada-qu-1759682392597_1759682392598.txt  (+29 more)
cloudflare-workers/: deploy.sh  package.json  tsconfig.json  wrangler.toml
components/: header.tsx  (+2 more)
rust-mev-engine/: BUILD_EXTERNAL.md  Cargo.toml
rust-mev-engine/.cargo/: config.toml
rust-mev-engine/config/: config-replit.toml  config.toml  rpc_config.toml  testnet_config.toml
rust-mev-engine/docs/: configuracion_monitoreo_alertas_mev_bot.md  despliegue_validacion_produccion_mev_bot.md  elementos_faltantes_produccion_mev_bot.md  implementacion_ci_cd_mev_bot.md  implementacion_seguridad_mev_bot.md  integracion_calculo_diferencial.md  pruebas_exhaustivas_testnet_mev_bot.md
rust-mev-engine/scripts/: deploy.sh
rust-mev-engine/src/: address_validator.rs  config.rs  data_fetcher.rs  database.rs  executor.rs  lib.rs  main.rs  math_engine.rs  mev_scanner.rs  minimal.rs  monitoring.rs  multicall.rs  opportunity_detector.rs  price_feeds.rs  rpc_health.rs  rpc_manager.rs  types.rs
rust-mev-engine/src/graph/: bellman.rs  mod.rs
rust-mev-engine/src/logging/: http_post.rs  jsonlog.rs  mod.rs
rust-mev-engine/src/scanners/: bridged_scanner.rs  event_scanner.rs  mod.rs  twap_scanner.rs
rust-mev-engine/src/simulate/: mod.rs  three_leg.rs  two_leg.rs
rust-mev-engine/src/sizing/: opt.rs
rust-mev-engine/tests/: test_mev_scanner.rs
(+112 files in other folders)
