[package]
name = "mev-engine-minimal"
version = "3.6.0"
edition = "2021"

[features]
# Conjunto mínimo para escaneo y utilidades (no toca tu binario actual)
scanners = ["dep:eyre", "dep:petgraph", "dep:futures-util", "dep:chrono", "dep:fs2", "dep:serde", "dep:serde_json", "dep:tokio"]
# EVM (event scanner con ethers). Habilita WebSocket solo cuando lo necesites.
evm = ["scanners", "dep:ethers"]
# HTTP para POST de oportunidades al backend
http = ["scanners", "dep:reqwest-opt", "dep:once_cell"]

[dependencies]
# Database - simplified (solo para binario principal)
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }

# Utils (solo para binario principal)
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Optional dependencies for scanners
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
eyre = { version = "0.6", optional = true }
petgraph = { version = "0.6", optional = true }
ethers = { version = "2", default-features = false, features = ["ws","rustls"], optional = true }
futures-util = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
once_cell = { version = "1", optional = true }
fs2 = { version = "0.4", optional = true }
reqwest-opt = { package = "reqwest", version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }

[[bin]]
name = "mev-engine-minimal"
path = "src/minimal.rs"

[[bin]]
name = "mev-scanner"
path = "src/bin/mev_scanner.rs"
required-features = ["scanners"]

[profile.dev]
opt-level = 1
debug = false
