[package]
name = "mev-engine-minimal"
version = "3.6.0"
edition = "2021"

[features]
# Conjunto mínimo para escaneo y utilidades (no toca tu binario actual)
scanners = []
# EVM (event scanner con ethers). Habilita WebSocket solo cuando lo necesites.
evm = ["scanners"]
# HTTP para POST de oportunidades al backend
http = ["scanners"]

[dependencies]
# Database - simplified (solo para binario principal)
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }

# Utils (solo para binario principal)
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Runtime y utilidades (NO opcionales → evitan "unresolved crate")
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
chrono = "0.4"
once_cell = "1"
fs2 = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
petgraph = "0.6"
ethers = { version = "2", default-features = false, features = ["ws", "rustls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "mev-engine-minimal"
path = "src/minimal.rs"

[[bin]]
name = "mev-scanner"
path = "src/bin/mev_scanner.rs"
required-features = ["scanners"]

[profile.dev]
opt-level = 1
debug = false

[dev-dependencies]
tracing-test = "0.1"

